--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>*α*MI|Chatnoir</title>
-    <meta name="description" content="Murakumo Industries|Chatnoir" />
-    <meta name="keywords" content="Alice Gear Aegis,Murakumo Industries,Chatnoir">
+    <title>AIC|Historical Archives</title>
+    <meta name="description" content="Aegis Intelligence Command|Historical Archives" />
+    <meta name="keywords" content="Alice Gear Aegis,Aegis Intelligence Command,Historical Archives">
 </head>
 
 <body class="h-100">
     <div id="app">
     </div>
     <noscript>
-        Murakumo Industries|Chatnoir
+        AIC|Historical Archives
     </noscript>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114331235-1"></script>
